Fix about:sandbox display on Android.

Don't do work in DCHECKs.

BUG=715792
R=nasko@chromium.org

Review-Url: https://codereview.chromium.org/2847573002 .
Cr-Commit-Position: refs/heads/master@{#467677}

Former-commit-id: f29b4a2d08584052867b233984efba57fe9f893c